--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "cloudinary": "^2.5.0",
+    "expo": "~51.0.31",
+    "expo-blur": "~13.0.2",
+    "expo-camera": "~15.0.16",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modals": "^0.22.3",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
